# evolveX

./: EVOLVEX_SCORE.py  EvolveX-score.xlsx  README.md  determine_trait_flux_basis.py  enumerate_evolvex.py  getPotentialTargets.py  get_alternative_flux_bases.py  get_flux_basis_directions.py  get_growth_supporting_niche12.py  optimality.py  production_env.ipynb  prune_flux_basis_solutions.py  run_FBA.py  test_score.ipynb  testing.ipynb  trait_flux_basis.py  workflow.py  workflow1.ipynb
cplex_setup/: CMakeLists.txt  c_cpp_properties.json
results/: Targetlists.xlsx
